--- a/src/app/home/return-product/return-product-detail/return-product-detail.component.html
+++ b/src/app/home/return-product/return-product-detail/return-product-detail.component.html
@@ -4,14 +4,15 @@
 <td>{{productData?.convertedQuantity}} {{productData?.viewBaseProductUnit.baseUnit}}</td>
 <td>{{productData?.returnedQuantity}} {{productData?.viewBaseProductUnit.baseUnit}}</td>
 <td *ngIf="checkFull == true">{{productData?.quantity * productData?.unitPrice | currency:'VND'}}</td>
+<td>{{productData?.unitPrice | currency:'VND'}} / {{productData?.viewBaseProductUnit.baseUnit}}</td>
 <td *ngIf="checkFull != true">
-  <nz-input-number [(ngModel)]="quantityProduct" [nzMin]="1" [nzMax]="productData?.convertedQuantity - productData?.returnedQuantity"
-                   [nzStep]="1" (ngModelChange)="changeQuantity()"></nz-input-number>
-  {{productData?.viewBaseProductUnit.baseUnit}}
+  <nz-input-number [(ngModel)]="quantityProduct" [nzMin]="1"
+    [nzMax]="productData?.convertedQuantity - productData?.returnedQuantity" [nzStep]="1"
+    (ngModelChange)="changeQuantity()"></nz-input-number>
 </td>
 <td *ngIf="checkFull != true">
-  <nz-input-number [(ngModel)]="batchTotalprice" [nzMin]="1"
-                   [nzStep]="1" (ngModelChange)="changeTotalPrice()"></nz-input-number>
+  <nz-input-number [(ngModel)]="batchTotalprice" [nzMin]="1" [nzStep]="1" (ngModelChange)="changeTotalPrice()">
+  </nz-input-number>
 </td>
 <td *ngIf="checkFull != true">
   <i class="fa fa-trash" role="button" (click)="deleteBatch()"></i>
