--- a/src/app/home/sample-prescription/sample-prescription-template/sample-prescription-template.component.html
+++ b/src/app/home/sample-prescription/sample-prescription-template/sample-prescription-template.component.html
@@ -1,18 +1,52 @@
-<div>
-  <nz-tabset
-    style="height:220px;"
-    nzTabPosition="left"
-  >
-    <nz-tab nzTitle="ok">
-      <nz-tabset
-        style="height:220px;"
-        nzTabPosition="left"
-      >
-        <nz-tab nzTitle="ok">
-          ahdgfhjds
-        </nz-tab>
-      </nz-tabset>
-    </nz-tab>
+<div class="container-fluid">
+  <div class="row mt-5 sample__template">
+     <nz-tabset
+       style="width: 100%; padding: 4vh 2vh;"
+       nzTabPosition="left"
+     >
+       <nz-tab nzTitle="oksldjfhsjdfjksdhfksdhfkskfjhkdjfhksjdfhksdhfksdhf" style="max-width: 20%">
+         <nz-tabset
+           style="height: calc(85vh - 8vh)"
+           nzTabPosition="left"
+         >
+           <nz-tab nzTitle="ok">
+             ahdgfhjds
+           </nz-tab>
+           <nz-tab nzTitle="ok2">
+             123
+           </nz-tab>
+           <nz-tab nzTitle="ok3">
+             234234234
+           </nz-tab>
+           <nz-tab nzTitle="ok4">
+             23dsf234dfsd
+           </nz-tab>
 
-  </nz-tabset>
+         </nz-tabset>
+       </nz-tab>
+
+       <nz-tab nzTitle="oksldjfhsjd12312313123" style="max-width: 20%">
+         <nz-tabset
+           style="height: calc(85vh - 8vh)"
+           nzTabPosition="left"
+         >
+           <nz-tab nzTitle="ok123">
+             ahdgfhjds1231231231
+           </nz-tab>
+           <nz-tab nzTitle="ok2123">
+             123123123123
+           </nz-tab>
+           <nz-tab nzTitle="ok3123">
+             2342341231313123234
+           </nz-tab>
+           <nz-tab nzTitle="ok4123">
+             23dsf2312312312314dfsd
+           </nz-tab>
+
+         </nz-tabset>
+       </nz-tab>
+
+     </nz-tabset>
+
+  </div>
 </div>
