--- a/src/app/home/home-template/home-template.component.html
+++ b/src/app/home/home-template/home-template.component.html
@@ -9,9 +9,9 @@
         <li class="nav-item d-block " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a [routerLink]="['/home']">Bán hàng</a>
         </li>
-        <li class="nav-item d-block " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
-          <a [routerLink]="['/home/sample-prescription']">Đơn mẫu</a>
-        </li>
+<!--        <li class="nav-item d-block " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">-->
+<!--          <a [routerLink]="['/home/sample-prescription']">Đơn mẫu</a>-->
+<!--        </li>-->
         <li class="nav-item d-block" [routerLinkActive]="'active'">
           <a [routerLink]="['/home/input']">Nhập hàng</a>
         </li>
