--- a/src/app/home/input/input-element/input-element.component.css
+++ b/src/app/home/input/input-element/input-element.component.css
@@ -1,10 +1,24 @@
-tr td{
+tr td {
   padding: 10px;
 }
 
-#input__product{
+#input__product {
   width: 100%;
   box-shadow: 3px 5px 4px 4px rgba(53, 53, 53, 0.149);
   border-radius: 10px;
   margin-bottom: 30px;
+}
+
+nz-tag {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin: 0 auto 5px auto;
+}
+
+nz-tag i {
+  font-size: 15px;
+  height: 15px;
+  margin: auto 0;
 }
