--- a/src/app/home/input/input-template/input-template.component.css
+++ b/src/app/home/input/input-template/input-template.component.css
@@ -9,6 +9,7 @@
   box-shadow: 0px 0 30px rgb(1 41 112 / 10%);
   border-radius: 5px;
   height: 85vh;
+  position: relative;
 }
 
 #customer__in__bill {
